--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "ext/Monocypher"]
 	path = ext/Monocypher
 	url = https://github.com/LoupVaillant/Monocypher.git
+[submodule "ext/--force"]
+	path = ext/--force
+	url = https://github.com/badzong/base64.git
+[submodule "ext/base64"]
+	path = ext/base64
+	url = https://github.com/badzong/base64.git
